fix (client/Favorite): grid-gap books

--- a/client/src/components/pages/Favorites/Favorites.scss
+++ b/client/src/components/pages/Favorites/Favorites.scss
@@ -1,5 +1,7 @@
 .favorites_component {
   .favorites_container {
     margin-top: 2rem;
+    display: grid;
+    grid-gap: 0.5rem;
   }
 }
